--- a/00-databases-00/sorted_info_creation/0238/progettosnaps.net/classich.ini
+++ b/00-databases-00/sorted_info_creation/0238/progettosnaps.net/classich.ini
@@ -44,6 +44,7 @@ esoccer
 estargte
 eturtles
 flash
+fowling
 funjacks
 galaxy2
 gckong
@@ -68,6 +69,7 @@ mchess
 mcompgin
 mfootb2
 mhockey
+monkeygk
 msoccer
 msthawk
 mwcbaseb
