add msx1 and msx2

--- a/00-databases-00/sorted_info_creation/0240/forum.ini
+++ b/00-databases-00/sorted_info_creation/0240/forum.ini
@@ -37,6 +37,7 @@ gamepock
 gmaster
 gp32
 gx4000
+hbf700p
 hec2hrx
 interact
 jupace
@@ -76,4 +77,5 @@ tutor
 tvc64
 vc4000
 vector06
+vg802020
 vg5k
