add automatically created "handheld" categories
(contain drivers with emulation="good" in -listxml)

gameandwatch.ini
jakks.ini
konamih.ini
tigerh.ini
tigerrz.ini

--- a/00-databases-00/sorted_info_creation/0XXX/gameandwatch.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/gameandwatch.ini
@@ -24,7 +24,9 @@ gnw_flagman
 gnw_gcliff
 gnw_ghouse
 gnw_helmet
+gnw_helmeto
 gnw_judge
+gnw_judgeo
 gnw_lboat
 gnw_lion
 gnw_manhole
@@ -32,6 +34,7 @@ gnw_manholeg
 gnw_mario
 gnw_mariocm
 gnw_mariocmt
+gnw_mariocmta
 gnw_mariotj
 gnw_mbaway
 gnw_mickdon
