--- a/00-databases-00/sorted_info_creation/0XXX/tigerh.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/tigerh.ini
@@ -12,6 +12,8 @@ tdennis
 tdummies
 tflash
 tgaiden
+tgaiden3
+tgargnf
 tgaunt
 tgoldeye
 tgoldnaxe
@@ -44,6 +46,7 @@ tsonic
 tsonic2
 tspidman
 tstrider
+tsuperman
 tswampt
 ttransf2
 tvindictr
