--- a/00-databases-00/sorted_info_creation/0XXX/jakks.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/jakks.ini
@@ -8,6 +8,8 @@ jak_dora
 jak_dorr
 jak_dpr
 jak_dprs
+jak_dwmn
+jak_dwmno
 jak_fan4
 jak_just
 jak_mk
@@ -17,10 +19,11 @@ jak_nick
 jak_pooh
 jak_sbfc
 jak_sbjd
-jak_sdoo
 jak_sith
+jak_sithp
 jak_spdm
+jak_swot
 jak_wall
 jak_wof
 jak_wwe
-
+jak_xmenp
