update refreshed ini files
90º.ini (all drivers with rotate="90" or "270" in -listxml (good and preliminary drivers) )
good.ini (all drivers with emulation="good" in -listxml)
lightgun.ini (all drivers with lightgun in -listxml (good and preliminary drivers) )

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -59,8 +59,6 @@
 8ballact
 8ballact2
 8bpm
-990189
-990189v
 99lstwar
 99lstwara
 99lstwarb
@@ -81,6 +79,7 @@ acombat3
 acombat4
 acombato
 acrobatm
+acrobatmbl
 ad2083
 aerfboo2
 aerfboot
@@ -125,7 +124,6 @@ akkanvdr
 alcon
 alibaba
 alibabab
-alice90
 alieninv
 alieninvp2
 alinvade
@@ -189,6 +187,7 @@ arkanoidu
 arkanoiduo
 arkatayt
 arkatour
+arkatour2
 arkbloc2
 arkbloc3
 arkblock
@@ -199,6 +198,7 @@ arknoid2b
 arknoid2j
 arknoid2u
 arktayt2
+armchamp
 armchmp2
 armchmp2o
 armchmp2o2
@@ -247,7 +247,9 @@ avefenix
 avefenixl
 avefenixrf
 avengers
-avengers2
+avengersa
+avengersb
+avengersc
 azurian
 babypac
 babypac2
@@ -284,6 +286,8 @@ batrideru
 batsugun
 batsuguna
 batsugunb
+batsugunbl
+batsugunc
 batsugunsp
 battlane
 battlane2
@@ -299,7 +303,6 @@ bbakraidc
 bbakraidj
 bbakraidja
 bcruzm12
-bdk_290
 beaminv
 beastf
 beastfp
@@ -309,20 +312,25 @@ berenstn
 bermudat
 bermudata
 bermudatj
+betafrce
 bgaregga
 bgareggabl
 bgareggabla
+bgareggablj
 bgareggacn
 bgareggahk
+bgareggak
 bgaregganv
 bgareggat
 bgareggat2
 bgareggatw
 bigbang
+bigbanga
 bigbucks
 bigevglf
 bigevglfj
 bigkong
+bigkonggx
 bigprowr
 bikkuric
 billiard
@@ -330,7 +338,7 @@ bioatack
 birdiy
 birdtry
 birdtrya
-bit90
+birdtryb
 bitgrpha
 bitgrphb
 bjtwin
@@ -366,6 +374,7 @@ bluehawk
 bluehawkn
 blueprnt
 blueprntj
+bmxstunts
 bngotime
 bnj
 bnjm
@@ -405,7 +414,6 @@ brvblade
 brvbladea
 brvbladej
 brvbladeu
-bs9009cx
 btime
 btime2
 btime3
@@ -427,7 +435,6 @@ bwcasino
 bwings
 bwingsa
 bwingso
-c900
 cadanglr
 cairblad
 calibr50
@@ -469,7 +476,6 @@ cburnrub2
 cburnrubj
 cchasm
 cchasm1
-cdi490a
 cdiscon1
 cdsteljn
 cencourt
@@ -482,19 +488,17 @@ centiped2
 centiped3
 centipedj
 cexplore
-cf2700
-cf2700g
 cfarm
 cfboy0a1
 cfghtice
 cfishing
 cflyball
-cgc7900
 cgraplop
 cgraplop2
 cgraplopj
 chamburger
 champbwl
+champbwla
 chanbara
 checkman
 checkmanj
@@ -543,8 +547,6 @@ clapapa2
 clbowl
 clocknch
 clocknchj
-club90s
-club90sa
 clubpacm
 clubpacma
 cluckypo
@@ -566,8 +568,6 @@ cocolocob
 colony7
 colony7a
 combh
-comg903d
-comg905d
 commando
 commandob
 commandob2
@@ -582,6 +582,7 @@ condorn
 congo
 congoa
 conquer
+conquest
 contra
 contra1
 contrab
@@ -753,7 +754,6 @@ devzone
 devzone2
 dfeveron
 dfkbl
-didakt90
 digdug
 digdug1
 digdug2
@@ -806,7 +806,6 @@ dkongo
 dkongpe
 dkongx
 dkongx11
-dm3270
 docastle
 docastle2
 docastleo
@@ -819,6 +818,7 @@ dogosokb
 dogosoke
 dogyuun
 dogyuuna
+dogyuunb
 dogyuunt
 dommy
 donpachi
@@ -948,14 +948,12 @@ fastdraw_130
 fastfred
 fastlane
 fcombat
-feap90
 fenix
 fenixn
 feversos
 fghtatck
 fgoal
 fgoala
-fh_905h
 fhawk
 fhawkj
 fi6845
@@ -964,6 +962,7 @@ fightrol
 finalizr
 finalizra
 finalizrb
+finger
 firebarr
 firebatl
 fireshrk
@@ -1005,7 +1004,6 @@ flytigera
 fnkyfish
 fnshark
 fourplay
-fpc900
 freekick
 freekicka
 freekickb1
@@ -1033,6 +1031,7 @@ fsharkbt
 fspiderb
 fstarfrc
 fstarfrcj
+fstarfrcja
 fstarfrcw
 funkybee
 funkybeeb
@@ -1049,6 +1048,7 @@ gaiapols
 gaiapolsj
 gaiapolsu
 galactic
+galactica2
 galaga
 galaga3
 galaga3a
@@ -1066,6 +1066,7 @@ galaktron
 galap1
 galap4
 galapx
+galartic
 galaxbsf
 galaxbsf2
 galaxcirsa
@@ -1153,7 +1154,6 @@ gemcrush
 gemini
 geminib
 geminij
-ges9051n
 getaway
 gground
 ggroundj
@@ -1168,7 +1168,6 @@ gigasm2b
 gmahou
 gmgalax
 gnbarich
-godzillp_090
 goindol
 goindolj
 goindolu
@@ -1227,6 +1226,7 @@ gunbirdk
 gundealr
 gundealra
 gundealrbl
+gundealrbl2
 gundealrt
 gundhara
 gundharac
@@ -1275,11 +1275,6 @@ hangly3
 harem
 hbarrel
 hbarrelu
-hbf900
-hbf900a
-hbg900ap
-hbg900p
-hc90
 headoni
 headonn
 heartatk
@@ -1338,6 +1333,7 @@ hyhoo2
 ibara
 ibarablk
 ibarablka
+ibarao
 igmo
 ikari
 ikaria
@@ -1402,7 +1398,6 @@ invrvngea
 invrvngeb
 invrvngedu
 invrvngegw
-ip2700
 ipminvad
 ipminvad1
 irion
@@ -1525,6 +1520,7 @@ krull
 krzybowl
 ktiger
 ktiger2
+ktigera
 kuhga
 kyros
 kyrosj
@@ -1591,13 +1587,11 @@ luckyrlt
 luctoday
 lupin3
 lupin3a
-lwar_e90
 lwings
 lwings2
 lwingsb
 lwingsj
 lwingsja
-m290
 m660
 m660b
 m660j
@@ -1611,6 +1605,7 @@ madalienb
 madgear
 madgearj
 madshark
+madsharkbl
 mag_day
 mag_time
 mag_war
@@ -1661,6 +1656,7 @@ megazoneb
 megazoneh
 megazonei
 megazonej
+megrescu
 mercenario
 mercs
 mercsj
@@ -1674,6 +1670,7 @@ metlfrzr
 metlhawk
 metlhawkj
 mgolf
+micon2
 mightguy
 mikie
 mikiehs
@@ -1694,12 +1691,9 @@ miraxa
 misncrft
 misncrfta
 mjleague
-mk90
 mlander
 mltiwars
 mmagic
-mmf9000
-mmf9000_se
 mmonkey
 mmonkeyj
 mmpork
@@ -1725,7 +1719,9 @@ moonbase
 moonbasea
 mooncmw
 mooncptc
+mooncrecm
 mooncreg
+mooncreg2
 mooncrgx
 mooncrs2
 mooncrs3
@@ -1750,11 +1746,8 @@ mototour
 mouncrst
 mouser
 mouserc
-mpc900
-mpc900gx
 mplanets
 mplanetsuk
-mpu9088vf
 mrdo
 mrdobl
 mrdofabr
@@ -1780,6 +1773,7 @@ msisaac
 msjiken
 mspacii
 mspacii2
+mspackpls
 mspacmab
 mspacmab2
 mspacmab3
@@ -1806,7 +1800,6 @@ mspactwin
 mspuzzle
 mspuzzlea
 mspuzzleb
-mtc9016
 multiped
 mushisam
 mushisama
@@ -1864,7 +1857,6 @@ nmouseb
 noahsark
 nob
 nobb
-noki8890
 nomnlnd
 nomnlndg
 nost
@@ -1889,7 +1881,6 @@ omegaf
 omegafs
 omni
 ooparts
-orbit9090
 orbite
 orbitron
 outline
@@ -1999,20 +1990,11 @@ pengomc1
 pengomc2
 pengopac
 penta
-pepp0190
-pepp0190a
-pepp0190b
-pepp0190c
-pepp0290
-pepp0290a
-peps0090
 percuss
 perestro
 perestrof
 perfrman
 perfrmanu
-pex0190p
-pex2270p
 phelios
 pheliosj
 phoenix
@@ -2129,9 +2111,9 @@ puckmanf
 puckmanh
 puckmod
 pulsar
+punchkid
 pushover
 puzlclub
-pwb7270e
 pwrflip
 pzlestar
 qbert
@@ -2140,7 +2122,6 @@ qbertj
 qbertqub
 qberttst
 qbtrktst
-qi900
 qix
 qix2
 qixa
@@ -2160,7 +2141,6 @@ questers
 quizpun
 quizpun2
 quizqgd
-qvt190
 qwak
 r2dtank
 r2dx_v33
@@ -2219,7 +2199,6 @@ raidenua
 raidenub
 raiders
 raidersr3
-rainbow190
 rallybik
 raphero
 rapheroa
@@ -2356,6 +2335,7 @@ s1945a
 s1945bl
 s1945ii
 s1945iii
+s1945iiibl
 s1945j
 s1945k
 s1945n
@@ -2368,6 +2348,7 @@ samesamecn
 samesamenh
 samurai
 samuraia
+samuraij
 sandscrp
 sandscrpa
 sandscrpb
@@ -2439,6 +2420,7 @@ scrampt
 scramrf
 scregg
 scudhamm
+scudhamma
 scyclone
 sdtennis
 sdungeon
@@ -2498,6 +2480,7 @@ sinistarp
 sinvasn
 sinvasnb
 sinvemag
+sinvemag2
 sinvzen
 sirio2
 sisv
@@ -2506,7 +2489,6 @@ sisv2
 sisv3
 sitv
 sitv1
-skc_090
 skullfng
 skullfnga
 skullfngj
@@ -2535,17 +2517,13 @@ slapfigha
 slapfighb1
 slapfighb2
 slapfighb3
+slapfighm
 slikshot
 slikshot16
 slikshot17
 slither
 slithera
 slspirit
-sman_190e
-sman_190ef
-sman_190ei
-sman_190es
-sman_190gf
 smooncrs
 sncwgltd
 sngkace
@@ -2636,7 +2614,6 @@ spinner
 sprglbpg
 sprglobp
 springer
-sprk_090
 sprpuzzle
 spyhunt
 spyhuntp
@@ -2740,6 +2717,7 @@ supergx
 superinv
 superpac
 superpacm
+supershp
 supertnk
 superwng
 superx
@@ -2757,11 +2735,7 @@ swat
 swipeout
 sxevious
 sxeviousj
-sys2900
-sys9002
 szaxxon
-t4490
-t9000
 tacscan
 tactcian
 tactcian2
@@ -2795,6 +2769,7 @@ tdragon2a
 tdragon3h
 tdragonb
 tdragonb2
+tdragonb3
 teamqb
 teamqb2
 teedoff
@@ -2838,12 +2813,9 @@ thepitu2
 theportr
 thndblst
 thunderl
+thunderla
 thunderlbl
 thunderlbl2
-ti1270
-ti990_10
-ti990_4
-ti990_4v
 tictacv
 tigerh
 tigerhb1
@@ -2864,8 +2836,6 @@ tinv2650
 tiptop
 tisland
 titanpac
-tk90x
-tm8k902
 tndrcade
 tndrcadej
 tnextspc
@@ -2902,7 +2872,6 @@ touchemea
 tp84
 tp84a
 tp84b
-tr909
 tranqgun
 travrusa
 travrusab
@@ -2934,6 +2903,7 @@ trvmstr
 trvmstra
 trvmstrb
 trvmstrc
+trvmstrd
 trvquest
 trvwz2
 trvwz2a
@@ -2960,22 +2930,14 @@ turboe
 turbofrc
 turbofrco
 turbofrcu
+turbofrcua
 turbotag
 turpin
 turpins
 turtles
 tutankhm
 tutankhms
-tv990
-twcup90
-twcup90a
-twcup90b
-twcup90b1
-twcup90b2
-twcup90ba
-twcup90bb
-twcup90c
-twcup90t
+tvgm8080
 twinbee
 twinbeeb
 twincobr
@@ -2993,6 +2955,7 @@ undefeat
 uniwars
 uniwarsa
 unkhorse
+unkzilec
 upndown
 upndownu
 upyoural
@@ -3017,6 +2980,7 @@ vaportrau
 varth
 varthb
 varthb2
+varthb3
 varthj
 varthjr
 varthr1
@@ -3036,7 +3000,6 @@ vega
 venus
 verbena
 vfive
-victhc90
 victoryc
 victorycb
 victroad
@@ -3088,7 +3051,6 @@ warpwarp
 warpwarpr
 warpwarpr2
 waterski
-wcup90
 westgun2
 wiggie
 wingforc
@@ -3108,7 +3070,6 @@ wrestwar1d
 wrestwar2
 wrestwar2d
 wrofaero
-ws90
 wtennis
 ww3
 wwestern
@@ -3140,7 +3101,6 @@ youma2
 youmab
 youmab2
 yukiwo
-z9001
 zaryavos
 zarzon
 zaviga
@@ -3165,6 +3125,5 @@ zipzap
 zipzapa
 zoar
 zodiack
-zoom909
 zzyzzyxx
 zzyzzyxx2
