--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -1,8 +1,20 @@
+a1200xl
+a130xe
 a2600
 a2600_pop
 a2600p
+a400
+a400pal
 a51mxr3k
 a51mxr3ka
+a600xl
+a65xe
+a65xea
+a800
+a800pal
+a800xe
+a800xl
+a800xlp
 alg_bios
 aplatoon
 area51
@@ -145,6 +157,7 @@ duckhunt
 dx64
 edu64
 eggventr
+eggventr1
 eggventr2
 eggventr7
 eggventr8
@@ -157,12 +170,15 @@ falcon30
 falcon40
 famibox
 famicom
+famicomo
 famistat
+famitvc1
 famitwin
 fashiong
 fashiong2
 fastdraw
 fastdraw_130
+fctitler
 fds
 fstation
 funcube
@@ -216,6 +232,7 @@ hotd2
 hotd2e
 hotd2o
 hotd2p
+hotdo
 hotdp
 hp9845c
 hp9845c_de
@@ -273,7 +290,6 @@ luckywldj
 lupinsho
 lupinshoo
 m82
-m82p
 maddog
 maddog2
 maddog2_100
@@ -366,11 +382,15 @@ mtchxlgldo
 mtchxlti
 mtjpoker
 mtouchxl
+mtu130
 nes
+nesm8
+nesm8a
+nesm8b
 nespal
 nevada
 nstocker
-nstocker2
+nstockera
 nycaptor
 odeontw
 odeontw2
@@ -609,6 +629,7 @@ tt030_pl
 tt030_uk
 turkhunt
 tutstomb
+tvboy
 tvboyii
 undrfire
 undrfirej
@@ -636,6 +657,7 @@ wschampa
 wschampb
 wsjr
 wsjr_15
+xegs
 yukon
 yukon1
 zeropnt
