add automatically created classich.ini (mame0250)

--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -1,17 +1,22 @@
 alnattck
 alnchase
+amaztron
 astrocmd
+autorace
 bambball
 bankshot
 bbtime
 bcclimbr
+bcheetah
 bdoramon
 bfriskyt
+blastit
 bmboxing
 bmcfball
 bmsafari
 bmsoccer
 bpengo
+brainbaf
 bultrman
 bzaxxon
 cdkong
@@ -22,9 +27,14 @@ cmsport
 cnbaskb
 cnfball
 cnfball2
+cnsector
+copycat
+copycatm2
 cpacman
 cpacmanr1
 cqback
+ditto
+dxfootb
 ebaskb2
 ebball
 ebball2
@@ -37,6 +47,8 @@ egalaxn2
 einvader
 einvader2
 einvaderc
+elecdet
+eleciq
 epacman2
 epacman2r
 esbattle
@@ -45,53 +57,105 @@ estargte
 eturtles
 flash
 funjacks
+funrlgl
+funtag
+fxmcr165
 galaxy2
+galaxy2b
 gckong
 gdigdug
 ghalien
 ginv
 ginv1000
 ginv2000
+gjackpot
 gjungler
 gpoker
+gravity
+gscobra
 h2hbaseb
 h2hbaskb
+h2hbaskbc
+h2hboxing
 h2hfootb
 h2hhockey
+h2hhockeyc
 h2hsoccerc
 hccbaskb
+horocomp
+horseran
 invspace
 kingman
+lafootb
+lostreas
 machiman
+maniac
+mbaseb
 mbaskb
+mbaskb2
 mchess
 mcompgin
+mdallas
+mdndclab
+merlin
+mfootb
 mfootb2
 mhockey
+mhockeya
+misatk
+mmarvin
+mmerlin
 msoccer
+msoccer2
 msthawk
 mwcbaseb
+mwcfootb
 nstarfox
+nummunch
 packmon
 pairmtch
+pbmastm
 pbqbert
 phpball
+playmaker
+quizwizc
 raisedvl
 rockpin
+rzbatfor
+scruiser
 splasfgt
 splitsec
 ssfball
+ssports4
+stopthief
+stopthiefp
+subwars
+t7in1ss
+talkingbb
+talkingfb
 tbaskb
 tbreakup
+tbttf
+tc4
+tc7atc
 tcaveman
 tccombat
+tigarden
+tinday
 tmpacman
 tmscramb
 tmtennis
 tmtron
 trshutvoy
+trspacmis
+trspider
 trsrescue
+trthuball
+tshadow
 ufombs
 us2pfball
 vinvader
+wildfire
 zackman
+zodiac
+
