manually add drivers to all_in1.ini

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -43,8 +43,11 @@ miwi2_7
 mysprtch
 mysprtcp
 mysptqvc
+namcons1
+namcons2
 njp60in1
 oplayer
+pballpup
 pdc100
 pdc150t
 pdc200
@@ -59,11 +62,17 @@ reactmd
 rminitv
 sarc110
 sudopptv
+swclone
 sy888b
 sy889
+taitons1
+taitons2
+tak_geig
 techni4
 timetp36
+tmntmutm
 tmntpdc
+tomcpin
 unk1682
 vgcaplet
 vgpmini
@@ -73,9 +82,3 @@ vsplus
 zdog
 zone7in1
 zudugo
-namcons1
-namcons2
-taitons1
-taitons2
-tak_geig
-tomcpin
