add m5 and gameking
discussed here :
https://retropie.org.uk/forum/topic/32188/creating-es-gamelists-with-media-for-mame-lr-mame-lr-mess/159

--- a/00-databases-00/sorted_info_creation/0XXX/forum.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/forum.ini
@@ -33,6 +33,7 @@ galaxy
 galaxyp
 gamate
 gamecom
+gameking
 gamepock
 gmaster
 gp32
@@ -43,6 +44,7 @@ interact
 jupace
 laser210
 lynx48k
+m5
 m5p
 maclc
 mc10
