add automatically created classich.ini (mame0251)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -557,6 +557,7 @@ cmkenospa
 cmmb103
 cmmb162
 cmrltv75
+cnebula
 cnightst
 cnightst2
 cntsteer
@@ -732,6 +733,9 @@ ddpdojp
 ddpdojt
 dealer
 decocass
+decodark
+decodark15
+decodark16
 decomult
 demoneye
 desertbr
@@ -1244,6 +1248,7 @@ gunsmokej
 gunsmokeu
 gunsmokeua
 gunsmokeub
+gunsmokeuc
 gutangtn
 guttangt
 guttangts3
@@ -2773,6 +2778,7 @@ tdragonb3
 teamqb
 teamqb2
 teedoff
+teedoffj
 telmahjn
 telpacfl
 tempest
