--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -1277,6 +1277,7 @@ bonuspkr
 bonzeadv
 bonzeadvo
 bonzeadvp
+bonzeadvp2
 bonzeadvu
 boobhack
 boogwing
@@ -2072,6 +2073,7 @@ cnbaskb
 cncchess
 cncchess2
 cndypuzl
+cnebula
 cnfball
 cnfball2
 cnightst
@@ -2831,6 +2833,9 @@ debutm
 decathln
 decathlna
 decocass
+decodark
+decodark15
+decodark16
 decomult
 deerhunt
 deerhunta
@@ -3251,6 +3256,7 @@ dwex
 dwex101cn
 dwpc
 dwpc101j
+dx100
 dx64
 dxfootb
 dyger
@@ -3805,6 +3811,7 @@ ffantasyj
 ffight
 ffight2b
 ffighta
+ffightae
 ffightbl
 ffightbla
 ffightblb
@@ -4972,6 +4979,7 @@ gunsmokej
 gunsmokeu
 gunsmokeua
 gunsmokeub
+gunsmokeuc
 gururin
 gussun
 gutangtn
@@ -5343,8 +5351,10 @@ hp85
 hp86b
 hp86b_001
 hp86b_004
+hp9825a
 hp9825b
 hp9825t
+hp9831
 hp9845b
 hp9845b_de
 hp9845c
@@ -6325,6 +6335,7 @@ klaxp2
 klondkp
 kloneran
 kmc5000
+knascar
 knckhead
 knckheadj
 knckheadjp
@@ -6479,6 +6490,7 @@ krvnjvtv
 krybolov
 krzybowl
 ksayakyu
+kskatedie
 kt76
 ktiger
 ktiger2
@@ -7577,6 +7589,7 @@ mjyuugia
 mjzoomin
 mk
 mk14
+mk14vdu
 mk1forth
 mk2
 mk2chal
@@ -7826,6 +7839,7 @@ mpc64
 mpchoice
 mpchoicea
 mpf1
+mpf1_88
 mpf1b
 mplanets
 mplanetsuk
@@ -7834,6 +7848,7 @@ mpt02h
 mpt05
 mpu1000
 mpu2000
+mpumpkin
 mrangbat
 mranger
 mrchalgr
@@ -7973,6 +7988,7 @@ mswordj
 mswordr1
 mswordu
 mt65
+mt6809
 mtc9016
 mtchxl6k
 mtchxl6ko
@@ -8677,6 +8693,8 @@ palamed
 palamedj
 palmf31
 palmiii
+palmiiic
+palmm100
 palmmd8
 palmpers
 palmpro
@@ -8798,6 +8816,13 @@ pc1640
 pc1640dd
 pc1640hd20
 pc1640hd30
+pc8801fa
+pc8801ma
+pc8801ma2
+pc8801mh
+pc8801mk2fr
+pc8801mk2mr
+pc8801mk2sr
 pc_1942
 pc_bball
 pc_bfght
@@ -10114,6 +10139,7 @@ pwheelsj
 pwrflip
 pwrgoal
 pwrinst2
+pwrinst2a
 pwrinst2j
 pwrkick
 px4
@@ -11870,6 +11896,7 @@ slspirit
 sltblgp1
 sltblgpo
 sltblgtk
+sltblgtka
 sltpcycl
 sltpstep
 slyspy
@@ -12263,6 +12290,7 @@ sporzbx
 sporzpp
 sporztn
 spotty
+sprachmg
 sprcros2
 sprcros2a
 sprglbpg
@@ -12973,6 +13001,7 @@ teddybb
 teddybbo
 teddybbobl
 teedoff
+teedoffj
 teetert
 tehkanwc
 tehkanwcb
