--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -1,3 +1,9 @@
+32x
+32x_mcd
+32x_mcdj
+32x_scd
+32xe
+32xj
 a1200xl
 a130xe
 a2600
@@ -15,6 +21,7 @@ a800pal
 a800xe
 a800xl
 a800xlp
+aiwamcd
 alg_bios
 aplatoon
 area51
@@ -101,6 +108,7 @@ cbm720
 cbm720_de
 cbm720_se
 cbm730
+cdx
 cgc7900
 cheyenne
 chiller
@@ -133,6 +141,7 @@ crossbow
 cryptklr
 cubo
 cyclshtg
+dcat16
 deathcox
 deathcoxj
 deathcoxo
@@ -190,8 +199,13 @@ funlddlx
 g13knd
 gallgall
 gallgall_21
+gamegeaj
+gamegear
 gchinatv
 gdfs
+gen_nomd
+genesis
+genesis_tmss
 genmagi
 ghlpanic
 ghoshunt
@@ -250,6 +264,8 @@ jnero
 jorn720
 kdeadeye
 kyhatonu
+laseract
+laseractj
 lasstixx
 lastbh
 lastbh_006
@@ -313,6 +329,14 @@ mechatt
 mechattj
 mechattu
 mechattu1
+megacd
+megacd2
+megacd2j
+megacda
+megacdj
+megadrij
+megadriv
+megajet
 megat
 megat2
 megat2a
@@ -383,6 +407,7 @@ mtchxlti
 mtjpoker
 mtouchxl
 mtu130
+multmega
 nes
 nesm8
 nesm8a
@@ -497,6 +522,8 @@ sc3000
 sc3000h
 scrabble
 scrabbled
+segacd
+segacd2
 sg1000
 sg1000m2
 sg1000m3
@@ -563,6 +590,12 @@ targeth
 targeth10
 targetha
 tatacot
+terabrst
+terabrsta
+terabrstaa
+terabrstj
+terabrstja
+terabrstua
 tesa6240
 tickee
 tierras100hz
@@ -652,12 +685,15 @@ vsfdf
 vsgshoe
 whodunit
 whodunit8
+wmega
+wmegam2
 wschamp
 wschampa
 wschampb
 wsjr
 wsjr_15
 xegs
+xeye
 yukon
 yukon1
 zeropnt
