--- a/00-filesystem-00/opt/retropie/configs/all/emulators.cfg
+++ b/00-filesystem-00/opt/retropie/configs/all/emulators.cfg
@@ -1,15 +1,15 @@
-gameandwatch_DonkeyKong(MultiScreen)="lr-gw"
-gameandwatch_DonkeyKongCircus(Panorama)="lr-gw"
-gameandwatch_DonkeyKongII(MultiScreen)="lr-gw"
-gameandwatch_DonkeyKongJr(Panorama)="lr-gw"
+gameandwatch_DonkeyKongMultiScreen="lr-gw"
+gameandwatch_DonkeyKongCircusPanorama="lr-gw"
+gameandwatch_DonkeyKongIIMultiScreen="lr-gw"
+gameandwatch_DonkeyKongJrPanorama="lr-gw"
 gameandwatch_Egg="lr-gw"
-gameandwatch_Lifeboat(MultiScreen)="lr-gw"
-gameandwatch_MarioBros(Multi_Screen)="lr-gw"
-gameandwatch_Mario'sBombsAway(Panorama)="lr-gw"
-gameandwatch_MickeyMouse(Panorama)="lr-gw"
-gameandwatch_MickeyMouse(WideScreen)="lr-gw"
+gameandwatch_LifeboatMultiScreen="lr-gw"
+gameandwatch_MarioBrosMulti_Screen="lr-gw"
+gameandwatch_Mario'sBombsAwayPanorama="lr-gw"
+gameandwatch_MickeyMousePanorama="lr-gw"
+gameandwatch_MickeyMouseWideScreen="lr-gw"
 gameandwatch_Parachute="lr-gw"
-gameandwatch_Snoopy(Panorama)="lr-gw"
+gameandwatch_SnoopyPanorama="lr-gw"
 gameandwatch_SnoopyTennis="lr-gw"
 gameandwatch_TurtleBridge="lr-gw"
 classich_ArmorBattle="lr-gw"
@@ -18,29 +18,29 @@ classich_Baseball="lr-gw"
 classich_BombFight="lr-gw"
 classich_CacciaalLadro="lr-gw"
 classich_CessateilFuoco="lr-gw"
-classich_ChickyWoggy(Arcade)="lr-gw"
-classich_ChickyWoggy(Tabletop)="lr-gw"
+classich_ChickyWoggyArcade="lr-gw"
+classich_ChickyWoggyTabletop="lr-gw"
 classich_Condor="lr-gw"
-classich_CrazyChewy(Tabletop)="lr-gw"
+classich_CrazyChewyTabletop="lr-gw"
 classich_Defendo="lr-gw"
 classich_DonkeyAngler="lr-gw"
-classich_DonkeyKong(Tabletop)="lr-gw"
-classich_DonkeyKongJr(TabletopColeco)="lr-gw"
-classich_DonkeyKongJr(TabletopNintendo)="lr-gw"
+classich_DonkeyKongTabletop="lr-gw"
+classich_DonkeyKongJrTabletopColeco="lr-gw"
+classich_DonkeyKongJrTabletopNintendo="lr-gw"
 classich_Dungeons&DragonsComputerFantasyGame="lr-gw"
 classich_EngineRoom="lr-gw"
 classich_Escape="lr-gw"
 classich_ExplorersofSpace="lr-gw"
 classich_Fowling="lr-gw"
 classich_FrogBoaster="lr-gw"
-classich_GalaxyII(Tabletop)="lr-gw"
+classich_GalaxyIITabletop="lr-gw"
 classich_GrabMan="lr-gw"
-classich_HippoTeeth(Mini)="lr-gw"
-classich_HippoTeeth(Sporty)="lr-gw"
-classich_HotLine(Mini)="lr-gw"
-classich_HotLine(Sporty)="lr-gw"
+classich_HippoTeethMini="lr-gw"
+classich_HippoTeethSporty="lr-gw"
+classich_HotLineMini="lr-gw"
+classich_HotLineSporty="lr-gw"
 classich_LasVegas="lr-gw"
-classich_MonkeyJump(Arcade)="lr-gw"
+classich_MonkeyJumpArcade="lr-gw"
 classich_Monkey="lr-gw"
 classich_MotorCross="lr-gw"
 classich_PacMan="lr-gw"
@@ -50,10 +50,10 @@ classich_Pirate="lr-gw"
 classich_RollerCoaster="lr-gw"
 classich_Safari="lr-gw"
 classich_SleepWalker="lr-gw"
-classich_Snoopy(Tabletop)="lr-gw"
+classich_SnoopyTabletop="lr-gw"
 classich_SubChase="lr-gw"
-classich_TennisMenace(Sporty)="lr-gw"
+classich_TennisMenaceSporty="lr-gw"
 classich_Tom&JerryPopper="lr-gw"
 classich_ToweringRescue="lr-gw"
 classich_Tron="lr-gw"
-classich_WildManJump(Tabletop)="lr-gw"
+classich_WildManJumpTabletop="lr-gw"
