add automatically created classich.ini (mame0252)

--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -421,6 +421,7 @@ amuse1a
 androdun
 androidp
 androidpo
+andromed
 angelkds
 anibonus
 anibonusb1
@@ -831,6 +832,7 @@ bangball
 bangbead
 bangj
 bankp
+bankpt
 bankshot
 baracuda
 baraduke
@@ -1294,6 +1296,7 @@ boris
 borisa
 borisdpl
 borntofi
+borntofia
 borntofiv
 bosco
 bosco1
@@ -1315,6 +1318,7 @@ bouldashj
 bounty
 bowl3d
 bowler
+bowlgum
 bowlrama
 bowmen
 boxer
@@ -1380,7 +1384,8 @@ bshark
 bsharkj
 bsharkjjs
 bsharku
-bship82
+bship
+bshipg
 bsktball
 bssoccer
 bssoccera
@@ -1891,6 +1896,7 @@ chelnovj
 chelnovjbl
 chelnovjbla
 chelnovu
+chesskng
 chessmst
 chessmstdm
 chesster
@@ -2263,6 +2269,7 @@ cosmo
 cosmogng
 cosmogngj
 cosmos
+cothello
 cotton
 cotton2
 cottonbm
@@ -2996,6 +3003,7 @@ djboyj
 djboyja
 djboyu
 djboyua
+djgirl
 dkgensan
 dkgensanm72
 dkgensanm82
@@ -3457,6 +3465,7 @@ esoccer
 espgal
 espgal2
 espgal2a
+espgal2b
 espgalbl
 espial
 espialu
@@ -3783,6 +3792,8 @@ feldo
 feleg
 felega
 felega1
+felega2
+felega3
 fellow
 fenixn
 feversoc
@@ -3883,6 +3894,7 @@ finallapjc
 finalttr
 findlove
 findout
+findouta
 finehour
 finger
 fire_l2
@@ -4260,6 +4272,7 @@ galpani4k
 galpanic
 galpanica
 galpanicb
+galpanicc
 galpanidx
 galpaniex
 galpanis
@@ -4308,6 +4321,7 @@ ganryu
 gaplus
 gaplusa
 gaplusd
+gapluse
 gaplust
 garage
 garage_10
@@ -5520,6 +5534,7 @@ imds2
 imekura
 imgfight
 imgfightj
+imgfightjb
 imolagp
 imolagpo
 impuls03
@@ -6112,6 +6127,7 @@ junglehbr
 junglek
 junglekas
 junglekj2
+junglekj2a
 jungler
 junglero
 junglers
@@ -7961,6 +7977,7 @@ mspacmanbcc
 mspacmanbco
 mspacmanbg
 mspacmanbg2
+mspacmanbgc
 mspacmanbgd
 mspacmanbhe
 mspacmanbi
@@ -8124,6 +8141,7 @@ mz700j
 mz80a
 mz80k
 mz80kj
+nabupc
 nagano98
 naganoj
 nam1975
@@ -8491,6 +8509,7 @@ omegaf
 omegafs
 omegrace
 omegrace2
+omegrace3
 omni
 omni_l1
 omotesnd
@@ -8966,13 +8985,13 @@ penfana
 pengadvb
 pengadvb2
 pengo
-pengo2
-pengo2u
-pengo3u
-pengo4
-pengo5
-pengo6
+pengoa
 pengob
+pengoc
+pengoj
+pengoja
+pengojb
+pengojbl
 pengojpm
 pengomc1
 pengomc2
@@ -9584,6 +9603,7 @@ pigouta
 pigskin
 pigskina
 pigskinb
+pikkaric
 pilot1k
 pilot5k
 pimps
@@ -10371,6 +10391,7 @@ ragtime
 ragtimea
 raiden
 raiden2
+raiden2au
 raiden2dx
 raiden2e
 raiden2ea
@@ -11102,6 +11123,7 @@ satansat
 satansata
 satansatind
 sathena
+satsf3d
 saturnzi
 sauro
 sauroa
@@ -11569,6 +11591,7 @@ sftmj114
 sfua
 sfw
 sfx
+sfxphasor
 sfz2a
 sfz2ad
 sfz2al
@@ -12036,6 +12059,7 @@ sonicbom
 sonicbomd
 soniccar
 sonicfgt
+sonicfgtj
 sonicp
 sonicpop
 sonicwi
@@ -12058,13 +12082,13 @@ sotsugyo
 sotsugyok
 soukobdx
 soulclbr
-soulclbraa
+soulclbra
+soulclbrab
 soulclbrja
 soulclbrjb
 soulclbrjc
 soulclbrub
 soulclbruc
-soulclbrwb
 souledge
 souledgea
 souledgeja
@@ -12132,6 +12156,7 @@ spacfury
 spacfurya
 spacfuryb
 spacfurybl
+spacian2
 spacmiss
 spactrai
 spacwalk
@@ -12222,6 +12247,7 @@ spellbnd
 spelunk2
 spelunkr
 spelunkrj
+spetrix
 spf2t
 spf2ta
 spf2td
@@ -12810,6 +12836,7 @@ swinggal
 swipeout
 swrds_l1
 swrds_l2
+swrds_lg2
 sws
 sws92
 sws92g
@@ -13015,10 +13042,12 @@ tekken2a
 tekken2b
 tekken2jb
 tekken2jc
+tekken2ua
 tekken2ub
 tekken3
 tekken3a
 tekken3b
+tekken3c
 tekken3d
 tekken3ja
 tekken3je1
@@ -13892,6 +13921,7 @@ usg182
 usg185
 usg187c
 usg211c
+usg251
 usg32
 usg82
 usg83x
@@ -14205,6 +14235,7 @@ vsbballj
 vsbballja
 vsbballjb
 vsc
+vscaptfl
 vsfdf
 vsgongf
 vsgradus
@@ -14706,6 +14737,7 @@ youkaidk1
 youkaidk2
 youma
 youma2
+yoyospel
 yujan
 yuka
 yukiwo
