--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -778,6 +778,7 @@ discoboy
 discoboyp
 discof
 divebomb
+djgirl
 dking
 dkingjr
 dkmb
@@ -894,6 +895,7 @@ escmars
 espgal
 espgal2
 espgal2a
+espgal2b
 espgalbl
 esprade
 espradej
@@ -1121,6 +1123,7 @@ galpani3k
 galpanic
 galpanica
 galpanicb
+galpanicc
 galpanicms
 galsnew
 galsnewj
@@ -1138,6 +1141,7 @@ gangonta
 gaplus
 gaplusa
 gaplusd
+gapluse
 gaplust
 gardia
 gardiab
@@ -1352,8 +1356,8 @@ illvelo
 imago
 imagoa
 imgfight
-imgfightb
 imgfightj
+imgfightjb
 imolagp
 imolagpo
 indianbt
@@ -1788,6 +1792,7 @@ mspacmanbcc
 mspacmanbco
 mspacmanbg
 mspacmanbg2
+mspacmanbgc
 mspacmanbgd
 mspacmanbhe
 mspacmanbi
@@ -1812,6 +1817,7 @@ mushisamb
 musicbal
 mustache
 mustachei
+mutacion
 mv1sfx
 mv1sfx2
 mv1sfxa
@@ -1983,13 +1989,13 @@ pballoonr
 peggle
 pegglet
 pengo
-pengo2
-pengo2u
-pengo3u
-pengo4
-pengo5
-pengo6
+pengoa
 pengob
+pengoc
+pengoj
+pengoja
+pengojb
+pengojbl
 pengojpm
 pengomc1
 pengomc2
@@ -2164,6 +2170,7 @@ raflesia
 raflesiau
 raiden
 raiden2
+raiden2au
 raiden2dx
 raiden2e
 raiden2ea
@@ -2361,6 +2368,7 @@ sasuke
 satansat
 satansata
 satansatind
+satsf3d
 saturnzi
 savanna
 savgbees
@@ -2578,6 +2586,7 @@ spacerng
 spacetrk
 spacetrkc
 spacewr3
+spacian2
 spacmiss
 spactrai
 spbactn
@@ -3038,6 +3047,7 @@ volfieduo
 vortex
 vpool
 vroulet
+vscaptfl
 vsgongf
 vulgus
 vulgusa
