update automatically created ini files (mame0255)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -934,10 +934,12 @@ f1gp
 f1gp2
 f1gpa
 f1gpb
+f1gpbl
 fa
 failgate
 falcon
 falconz
+fambowl
 fantasia
 fantasiaa
 fantasiab
@@ -1070,6 +1072,7 @@ galagamw
 galagao
 galaktron
 galap1
+galap2
 galap4
 galapx
 galartic
@@ -1087,6 +1090,7 @@ galaxianbl2
 galaxianbl3
 galaxianem
 galaxiani
+galaxianiii
 galaxianm
 galaxianmo
 galaxianrp
@@ -1483,6 +1487,7 @@ kbm
 kbm2nd
 kbm3rd
 kchamp
+kchamp2p
 kchamptec
 kchampvs
 kchampvs2
@@ -2348,6 +2353,7 @@ s1945bl
 s1945ii
 s1945iii
 s1945iiibl
+s1945iiibla
 s1945j
 s1945k
 s1945n
@@ -2537,6 +2543,7 @@ slikshot17
 slither
 slithera
 slspirit
+smiconk
 smooncrs
 sncwgltd
 sngkace
@@ -2593,6 +2600,7 @@ spbactn
 spbactnj
 spbactnp
 spcdrag
+spcebttl
 spceking
 spcewarl
 spcewarla
@@ -2724,6 +2732,7 @@ superabco
 superbar
 superbik
 superbon
+superbona
 superbug
 superg
 supergs
@@ -2825,6 +2834,7 @@ thepitj
 thepitm
 thepitu1
 thepitu2
+thepitu3
 theportr
 thndblst
 thunderl
