--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -10,6 +10,8 @@ bcclimbr
 bcheetah
 bdoramon
 bfriskyt
+bgalaxn
+bgunf
 blastit
 bmboxing
 bmcfball
@@ -29,7 +31,7 @@ cnfball
 cnfball2
 cnsector
 copycat
-copycatm2
+copycata
 cpacman
 cpacmanr1
 cqback
@@ -119,19 +121,18 @@ pbqbert
 phpball
 playmaker
 quizwizc
-raisedvl
 racetime
+raisedvl
 rockpin
 rzbatfor
-scruiser
 splasfgt
 splitsec
 ssfball
-ssports4
 stopthief
 stopthiefp
 subwars
 t7in1ss
+taddams
 talkingbb
 talkingfb
 tbaskb
@@ -143,20 +144,22 @@ tcaveman
 tccombat
 tigarden
 tinday
+tmbaskb
+tmchammer
 tmpacman
 tmscramb
 tmtennis
 tmtron
+tmvolleyb
+tnmarebc
+trsgkeep
 trshutvoy
 trspacmis
 trspider
 trsrescue
 trthuball
-tshadow
 ufombs
-us2pfball
 vinvader
 wildfire
 zackman
 zodiac
-
