--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -279,6 +279,7 @@ airwolfa
 ajax
 ajaxj
 akamaru
+akazukin
 akiss
 akkaarrh
 akkanvdr
@@ -448,6 +449,7 @@ anithunto
 anithunto2
 anithuntv1
 anpanman
+anpanmana
 anteater
 anteaterg
 anteatergg
@@ -924,6 +926,7 @@ bbcmc
 bbcmc_ar
 bbcmet
 bbcmt
+bbear
 bbh
 bbh2sp
 bbh2spa
@@ -999,6 +1002,7 @@ bestria
 beta
 betafrce
 bfriskyt
+bgalaxn
 bgaregga
 bgareggabl
 bgareggabla
@@ -1010,6 +1014,7 @@ bgaregganv
 bgareggat
 bgareggat2
 bgareggatw
+bgunf
 bguns_l7
 bguns_l8
 bguns_la
@@ -1415,6 +1420,7 @@ bsuertes
 bsuertet
 bsuerteu
 bsuertev
+bsuprem
 btime
 btime2
 btime3
@@ -1490,6 +1496,7 @@ bup
 bupa
 buraiken
 buraikenb
+burgkids
 burglarx
 burnforc
 burnforco
@@ -1930,6 +1937,7 @@ chleagxb
 chmate
 chmpnum
 chmpnuma
+chocovdr
 chokchok
 choko
 choplift
@@ -2104,16 +2112,11 @@ cobram3a
 cocean1a
 cocean6b
 coco
-coco2
 coco2b
 coco2bh
-coco2h
 coco3
-coco3dw1
 coco3h
 coco3p
-cocoe
-cocoeh
 cocoh
 cocoloco
 cocolocoa
@@ -2194,18 +2197,21 @@ comotion
 comotionp
 comp4
 compani1
+comparc
 compgolf
 compgolfo
 compis
 compis2
 complexx
+compperf
 comx35n
 comx35p
+conc
+concams
+concams5
 concept
-concply5
-concply8
-concplyv
-concstd
+concgla
+concvicp
 condor
 condorn
 congo
@@ -2245,7 +2251,7 @@ cop01a
 copsnrob
 copspa
 copycat
-copycatm2
+copycata
 coralr2
 corona
 coronaa
@@ -3975,7 +3981,7 @@ floritasm
 flower
 flowerj
 flstory
-flstoryj
+flstoryo
 flyball
 flyball1
 flyboy
@@ -4041,6 +4047,8 @@ fredmemj
 fredmemuk
 fredmemus
 fredmesp
+free200
+free220
 freekick
 freekicka
 freekickb1
@@ -4091,6 +4099,7 @@ fruitstb
 fruitstba
 fruitstbb
 fruitstbc
+fruitstbd
 fs1300
 fs4000
 fs4000a
@@ -4175,10 +4184,13 @@ fuusenpn
 fvrpitch
 fx
 fxmcr165
+g13jnr
 g13knd
 ga2
 ga2j
 ga2u
+gahaha
+gahaha2
 gaia
 gaialast
 gaiapols
@@ -4206,6 +4218,7 @@ galagamw
 galagao
 galaktron
 galap1
+galap2
 galap4
 galapx
 galartic
@@ -4225,6 +4238,7 @@ galaxianbl2
 galaxianbl3
 galaxianem
 galaxiani
+galaxianiii
 galaxianm
 galaxianmo
 galaxianrp
@@ -4281,6 +4295,7 @@ galpanise
 galpanisj
 galpanisk
 galpaniska
+galpanisu
 galpans2
 galpans2a
 galpans2j
@@ -4310,6 +4325,9 @@ gameking
 gamemach
 gamepock
 gametngk
+gammonm2
+gamshara
+gamsharao
 ganbare
 gangonta
 gangwars
@@ -4513,6 +4531,7 @@ ginv2000
 gionbana
 girotutt
 gjackpot
+gjspace
 gjungler
 gladiatr
 glasgow
@@ -4946,6 +4965,7 @@ gulfwar2
 gulfwar2a
 gulunpa
 gumbo
+gunbalina
 gunball
 gunbarl
 gunbarla
@@ -5321,6 +5341,7 @@ hotbit20
 hotblock
 hotblocka
 hotblockb
+hotbody
 hotbubl
 hotbubla
 hotchase
@@ -5938,6 +5959,7 @@ jb3000
 jchan
 jchan2
 jchana
+jclub2bl
 jclub2v100
 jclub2v101
 jclub2v110
@@ -6047,6 +6069,7 @@ jolycdii
 jolycdit
 jolycdsp
 jolycmzs
+jolygame
 jolyjokr
 jolyjokra
 jolyjokrb1
@@ -6054,6 +6077,8 @@ jolyjokrb2
 jolyjokrm
 jolyjokro
 jolyjokrp
+jolyjokrs
+jolyjokrt
 jongbou
 jongbou2
 jongkyo
@@ -6140,6 +6165,7 @@ jvchc7gb
 jyangoku
 jzth
 k28
+k28m2
 kabukikl
 kabukiz
 kabukizj
@@ -6208,6 +6234,7 @@ kbucky
 kc85
 kccomp
 kchamp
+kchamp2p
 kchamptec
 kchampvs
 kchampvs2
@@ -6251,7 +6278,7 @@ keksa
 keksb
 keksc
 kengo
-kengoa
+kengoj
 kenseim
 keroppi
 keroppij
@@ -6371,6 +6398,7 @@ knightsu
 knockout
 knockoutb
 knockoutc
+knpuzzle
 kod
 kodb
 kodj
@@ -6433,6 +6461,7 @@ konamigv
 konamigx
 konek
 kong
+konotako
 kontest
 kontiki
 korinai
@@ -6512,6 +6541,8 @@ ktiger
 ktiger2
 ktigera
 ktmnt
+ktmnt3
+ktmntbb
 ktopgun
 kuhga
 kungfub
@@ -6656,6 +6687,7 @@ leadang
 leader
 leadera
 leaguemn
+leaguemna
 leboom
 leds2011
 leds2011p
@@ -6741,19 +6773,21 @@ lhzb2a
 liberate
 liberateb
 liberatr
-liberatr2
+liberatrp
 liblrabl
 lifefrce
 lifefrcej
 lightbr
 lightbrj
 lightfgt
+lilcomp
 lilprof
-lilprof78
+lilprofa
 lindbios
 linkypip
 liquidk
 liquidku
+litelrn
 lithero
 littlerb
 liveafb
@@ -6872,6 +6906,8 @@ luckywld
 luckywldj
 luctoday
 lufykzku
+luna88k
+luna88k2
 lunapark
 lunaparkb
 lunaparkc
@@ -6890,6 +6926,10 @@ lvgirl94
 lvision
 lviv
 lvpoker
+lw30
+lw350
+lw450
+lw840
 lwings
 lwings2
 lwingsb
@@ -7157,6 +7197,7 @@ matchme
 matchnum
 mathmagi
 mathmarv
+mathsmag
 matmania
 mato
 matrim
@@ -7219,6 +7260,7 @@ mbutrfly
 mc10
 mc1000
 mc1502
+mc68000
 mc7105
 mc8020
 mc_110cb
@@ -7269,6 +7311,7 @@ megablst
 megablstj
 megablstu
 megacard
+megacarda
 megadon
 megadpkr
 megadpkrb
@@ -7739,6 +7782,7 @@ mongolnw
 monkelf
 monkeyd
 monkeysee
+monkmonk
 mononcol
 monoplcl
 monoplcld
@@ -7877,6 +7921,10 @@ mrdot
 mrdoy
 mrdrillr
 mrdrillrj
+mrdrilr2
+mrdrilr2j
+mrdrilr2u
+mrdrilrg
 mrdu
 mrflea
 mrgoemon
@@ -8068,6 +8116,7 @@ mustangb2
 mustangb3
 mustangs
 mutantf
+mutantf1
 mutantf2
 mutantf3
 mutantf4
@@ -8208,7 +8257,11 @@ nbashowt
 nbbatman
 nbbatmanu
 nc100
-nc150
+nc100de
+nc100dk
+nc100sv
+nc150fr
+nc150it
 nc200
 nc96
 nc96a
@@ -8328,6 +8381,7 @@ nibbler8
 nibblera
 nibblero
 nibblerp
+nicetsuk
 nichidvd
 nightgal
 nightmare
@@ -8453,6 +8507,7 @@ nwarrh
 nwarru
 nwarrud
 nws3260
+nws3410
 nyanpani
 nycaptor
 nyjoker
@@ -8502,6 +8557,7 @@ olibochu
 olivm15
 olmandingc
 olmandingo
+omar
 omega
 omegaa
 omegab
@@ -8745,6 +8801,7 @@ panicbom
 panicger
 panich
 panicstr
+panikuru
 panther
 panthera
 panzer
@@ -8791,6 +8848,7 @@ pballoon
 pballoonr
 pballpup
 pbancho
+pbanchoa
 pbchmp95
 pbillian
 pbillianb
@@ -9906,6 +9964,17 @@ popn1j
 popn1k
 popn2
 popn3
+popn4
+popn5
+popn6
+popn7
+popn8
+popnanm
+popnanm2
+popnanm2a
+popnanma
+popnmt
+popnmt2
 popnpop
 popnpopj
 popnpopu
@@ -10036,6 +10105,9 @@ psailor2
 psi98
 psion5mx
 psioncm
+psionhc100
+psionhc110
+psionhc120
 psionla
 psionlam
 psionlz
@@ -10053,8 +10125,20 @@ pspikesba
 pspikesc
 pspikesk
 pspikesu
+psr110
+psr150
+psr180
+psr190
 psr60
 psr70
+psr75
+psr76
+psr78
+pss11
+pss12
+pss21
+pss31
+pss6
 pstadium
 psurge
 psychic5
@@ -10075,6 +10159,7 @@ ptblank2a
 ptblank2b
 ptblank2c
 ptblank2ua
+ptblank3
 ptblanka
 ptrain
 ptrmj
@@ -10169,6 +10254,7 @@ py2k2100
 pyenaget
 pyl601
 pyl601a
+pylo
 pyramid
 pyros
 pyuuta
@@ -11130,6 +11216,7 @@ sauro
 sauroa
 saurob
 saurobl
+sauroc
 saurop
 saurorr
 savagere
@@ -11256,6 +11343,7 @@ scptchessa
 scrabble
 scrabbled
 scrablex
+scrablexa
 scrabsen
 scramb2
 scramb3
@@ -11409,6 +11497,7 @@ sf2ceblp
 sf2cebltw
 sf2ceds6
 sf2ceea
+sf2ceec
 sf2ceja
 sf2cejb
 sf2cejc
@@ -11628,6 +11717,9 @@ sfzjr2
 sg1000
 sg1000m2
 sg1000m3
+sgalaxy
+sgalaxya
+sgalaxyb
 sgemf
 sgemfa
 sgemfd
@@ -11955,6 +12047,7 @@ smgpu1d
 smgpu2
 smgpu2d
 smgpud
+smiconk
 smissw
 smondial
 smondial2
@@ -12179,6 +12272,7 @@ spc1500
 spc4000
 spc800
 spcdrag
+spcebttl
 spceking
 spcenctr
 spcewarl
@@ -12332,6 +12426,7 @@ sprint4
 sprint4a
 sprint8
 sprint8a
+sprinter
 sprpuzzle
 sprtauth
 sprtmtch
@@ -12355,6 +12450,7 @@ sqixu
 squaitsa
 squale
 squash
+squizchs
 sraider
 sranger
 srangerb
@@ -12535,6 +12631,7 @@ starsldr
 starswep
 starswepj
 startrek
+startrgn
 startrip
 startrkd
 startrks
@@ -12546,6 +12643,7 @@ starwars1
 starwarso
 starwbc
 starwbcp
+starwlb
 starzan
 statriv2
 statriv2v
@@ -12688,6 +12786,7 @@ superabco
 superbar
 superbik
 superbon
+superbona
 superbug
 superbwl
 superchs
@@ -12911,7 +13010,6 @@ talkingfb
 taltbeast
 tama
 tandy102
-tandy12
 tandy200
 tangtang
 tank8
@@ -12991,6 +13089,7 @@ tceptor
 tceptor2
 tcfball
 tcfballa
+tchess
 tcobra2
 tcobra2u
 tdawg_l1
@@ -13183,6 +13282,7 @@ thepitj
 thepitm
 thepitu1
 thepitu2
+thepitu3
 theroes
 thetogyu
 thief
@@ -13224,15 +13324,18 @@ thunt
 thuntk
 ti1000
 ti1250
-ti125076
+ti1250a
 ti1270
 ti1680
+ti25502
 ti25503
 ti30
 ti5100
+ti5200
 ti630
 ti73
 ti74
+ti74a
 ti81
 ti81v2
 ti82
@@ -13336,6 +13439,7 @@ tking
 tkinga
 tkingb
 tkmmpzdm
+tkn80
 tknight
 tkoboxng
 tm
@@ -13368,6 +13472,7 @@ tm7kmna
 tm7knj
 tm8k
 tm8k902
+tmbaskb
 tmc2000
 tmc600s2
 tmchammer
@@ -13411,6 +13516,7 @@ tms9995bb
 tmscramb
 tmtennis
 tmtron
+tmvolleyb
 tmwrp_l2
 tmwrp_l3
 tmwrp_t2
@@ -13485,6 +13591,7 @@ topaliens
 topaz_l1
 topbana
 topbladv
+topdrive
 topgear
 topgun
 topgunbl
@@ -13645,6 +13752,7 @@ trs80
 trs80dt1
 trs80m2
 trs80pc3
+trsgkeep
 trshutvoy
 trsm100
 trspacmis
@@ -13713,6 +13821,7 @@ tsptr_l3
 tst_galx
 tst_invd
 tstar432
+tstar432a
 tstrider
 tstrike
 tstrikea
@@ -14037,9 +14146,11 @@ vc6000
 vcarn
 vcc
 vcircle
+vclock3
 vcs80
 vdmaster
 vector06
+vector4
 vectrex
 vegasfst
 vegasfte
@@ -14569,6 +14680,7 @@ wsf3
 wstrike
 wstrikea
 wswan
+wtalker
 wtchjack
 wtchjacka
 wtchjackb
@@ -14593,6 +14705,7 @@ wwallyja
 wwallyja3p
 wwallyjad
 wwallyjd
+wwanpanm
 wwestern
 wwestern1
 wwfmania
@@ -14601,6 +14714,8 @@ wwfmaniac
 wwfmaniap
 wwfsstar
 wwfsstarb
+wwfsstarb2
+wwfsstarc
 wwfsstarj
 wwfsstaru4
 wwfsstaru6
