--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -123,7 +123,6 @@ cluedod
 cmi2x
 cndypuzl
 coco3
-coco3dw1
 coco3h
 coco3p
 colt
@@ -175,7 +174,6 @@ eggventra
 eggventrd
 eldoralg
 evilngt
-evilngte
 falcon30
 falcon40
 famibox
@@ -197,6 +195,7 @@ funcube3
 funcube4
 funcube5
 funlddlx
+g13jnr
 g13knd
 gallgall
 gallgall_21
@@ -224,6 +223,7 @@ gtfore05a
 gtfore05b
 gtfore05c
 gtfore06
+gunbalina
 gunbarl
 gunbarla
 gunbuletj
@@ -465,6 +465,7 @@ pc1640hd30
 pc_duckh
 pc_hgaly
 pc_wgnmn
+pda600
 pdc150t
 pdc40t
 peke0004
@@ -506,6 +507,7 @@ ptblank2a
 ptblank2b
 ptblank2c
 ptblank2ua
+ptblank3
 ptblanka
 qnilemax
 quickjac
